Prepare release 3.11.3
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>